--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Gliding Game</title>
+	<title>Glidieit</title>
 	<style type="text/css">
 		canvas {
 			border : 1px solid black;
+			background-color: #ccffff;
 		}
 		body {
 			margin: 0;
@@ -13,6 +14,6 @@
 </head>
 <body>
 <canvas width="800" height="400"></canvas>
-<script type="text/javascript" src="main.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
