--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<style type="text/css">
 		canvas {
 			border : 1px solid black;
-			background-color: #ccffff;
+			background-color: #66ffff;
 		}
 		body {
 			margin: 0;
