--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 </head>
 <body>
 <canvas width="800" height="400"></canvas>
+<h1 id="timer">00 : 00 . 000</h1>
 <script src="main.js"></script>
+<script src="timer.js"></script>
 </body>
 </html>
