--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
 <canvas width="800" height="400"></canvas>
+<script src="config.js"></script>
 <script src="main.js"></script>
 <script src="timer.js"></script>
 </body>
