--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<style type="text/css">
 		canvas {
 			border : 1px solid black;
-			background-color: #66ffff;
+			background-color: #fff;
 		}
 		body {
 			margin: 0;
@@ -17,6 +17,8 @@
 <canvas width="800" height="400"></canvas>
 <script src="config.js"></script>
 <script src="frame.js"></script>
+<script src="init.js"></script>
+<script src="menu.js"></script>
 <script src="main.js"></script>
 <script src="timer.js"></script>
 </body>
