Tutorial moved to a separate file.

--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
 <script src="menu.js"></script>
 <script src="main.js"></script>
 <script src="timer.js"></script>
+<script src="tutorial.js"></script>
 </body>
 </html>
