Level buttons displayed.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
 <canvas width="800" height="400"></canvas>
 <script src="config.js"></script>
+<script src="levels.js"></script>
 <script src="frame.js"></script>
 <script src="init.js"></script>
 <script src="menu.js"></script>
