In game finish notification added.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <script src="frame.js"></script>
 <script src="init.js"></script>
 <script src="menu.js"></script>
+<script src="alert.js"></script>
 <script src="main.js"></script>
 <script src="timer.js"></script>
 <script src="tutorial.js"></script>
